--- a/app/src/main/res/layout/fragment_refer_rummy.xml
+++ b/app/src/main/res/layout/fragment_refer_rummy.xml
@@ -128,7 +128,7 @@
                             android:progress="@{viewmodel.progress}"
                             android:indeterminateTint="@color/rummy_mainColor"
                             android:progressTint="@color/rummy_mainColor"
-                            android:progressDrawable="@drawable/bg_progress"
+                            android:progressDrawable="@drawable/bg_progress_rummy"
                             android:visibility="visible"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -169,7 +169,7 @@
                         android:elevation="10dp"
                         android:padding="@dimen/margin_min"
                         android:theme="@style/RummySdk_ProgressBar"
-                        android:visibility="@{viewmodel.isLoading() ? View.VISIBLE : View.GONE}"
+                        android:visibility="@{viewmodel.isLoading() || viewmodel.contactLoading ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
