--- a/app/src/main/res/layout/activity_deep_link_rummy.xml
+++ b/app/src/main/res/layout/activity_deep_link_rummy.xml
@@ -16,14 +16,14 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/rummy_black_3"
         tools:context=".ui.deeplink.DeepLinkActivityRummy">
 
         <com.rummytitans.playcashrummyonline.cardgame.widget.RoundedImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher_round"
+            android:src="@drawable/rummy_sdk_launcher"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
