--- a/app/src/main/res/layout/activity_rummy_add_cash.xml
+++ b/app/src/main/res/layout/activity_rummy_add_cash.xml
@@ -595,7 +595,7 @@
                                     android:layout_marginStart="8dp"
                                     android:layout_marginTop="5dp"
                                     android:fontFamily="@font/rubik_medium"
-                                    android:text="@string/credit_bonus"
+                                    android:text="@string/game_bonus"
                                     android:textColor="@color/text_color8"
                                     android:textSize="12sp"
                                     app:layout_constraintEnd_toEndOf="parent"
