--- a/app/src/main/res/layout/fragment_cash_bonus_rummy.xml
+++ b/app/src/main/res/layout/fragment_cash_bonus_rummy.xml
@@ -52,7 +52,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
                 android:gravity="center"
-                android:text="@string/credit_bonus"
+                android:text="@{viewmodel.title}"
                 android:textColor="@color/white"
                 android:textSize="12sp"
                 android:textStyle="bold"
@@ -120,7 +120,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="@string/credits"
+                            android:text="@{viewmodel.title}"
                             android:fontFamily="@font/rubik_medium"
                             android:textColor="@color/text_color8"
                             android:textSize="10sp" />
