--- a/app/src/main/res/layout/layout_progress_dialog_rummy.xml
+++ b/app/src/main/res/layout/layout_progress_dialog_rummy.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="@dimen/margin_min"
         android:layout_marginEnd="@dimen/margin_min"
         android:layout_marginBottom="@dimen/margin_min"
-        android:background="@drawable/bg_progress"
+        android:background="@drawable/bg_progress_rummy"
         android:backgroundTint="@color/text_color5"
         android:elevation="10dp"
         android:padding="@dimen/margin_min"
