--- a/app/src/main/res/layout/layout_rummy_mini_wallet.xml
+++ b/app/src/main/res/layout/layout_rummy_mini_wallet.xml
@@ -75,7 +75,7 @@
             app:layout_constraintEnd_toEndOf="@+id/piechart"
             app:layout_constraintStart_toStartOf="@+id/piechart"
             app:layout_constraintTop_toTopOf="@+id/piechart"
-            app:srcCompat="@drawable/ic_rupees"
+            app:srcCompat="@drawable/ic_rupees_rummy"
             app:tint="@color/white"/>
 
         <TextView
