--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -251,5 +251,6 @@
     <color name="lipstick_red">#c4002a</color>
     <color name="wine_red">#8f0825</color>
     <color name="rakebake_black">#0a0a0a</color>
+    <color name="RummyalertOrange">#ff9700</color>
 
 </resources>
