--- a/app/src/main/res/layout/activity_rummy_add_cash.xml
+++ b/app/src/main/res/layout/activity_rummy_add_cash.xml
@@ -6,7 +6,7 @@
     <data>
 
         <import type="android.graphics.Color" />
-
+        <import type="android.text.TextUtils" />
         <import type="android.view.View" />
 
         <import type="com.rummytitans.playcashrummyonline.cardgame.R" />
@@ -491,6 +491,123 @@
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </com.loopeer.shadow.ShadowView>
 
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/cardTds"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="16dp"
+                        android:elevation="8dp"
+                        android:theme="@style/Theme.MaterialComponents.Light"
+                        app:cardBackgroundColor="@color/rummy_black_3"
+                        app:cardCornerRadius="4dp"
+                        android:visibility="@{viewmodel.isGstCardVisible() ? View.VISIBLE: View.GONE}"
+                        app:layout_constraintTop_toBottomOf="@id/cardInput"
+                        >
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/clTds"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/dimen_16"
+                            android:background="@drawable/box_with_grey_border_rummy"
+                            android:visibility="@{viewmodel.isGstCalculating() ? View.GONE: View.VISIBLE}">
+
+                            <View
+                                android:id="@+id/tncHeader"
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                android:elevation="4dp"
+                                app:layout_constraintBottom_toBottomOf="@id/txtTdsTitle"
+                                app:layout_constraintEnd_toEndOf="@id/ivTdsInfo"
+                                app:layout_constraintStart_toEndOf="@id/txtTdsTitle"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:id="@+id/txtTdsTitle"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/rubik_medium"
+                                android:paddingVertical="4dp"
+                                android:text="@string/gst_calculation"
+                                android:textColor="@color/text_color8"
+                                android:textSize="14sp"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <ImageView
+                                android:id="@+id/ivTdsInfo"
+                                android:layout_width="16dp"
+                                android:layout_height="16dp"
+                                android:layout_marginStart="4dp"
+                                android:src="@drawable/ic_info"
+                                android:visibility="@{TextUtils.isEmpty(viewmodel.gstModel.tncURL)?View.GONE:View.VISIBLE}"
+                                app:layout_constraintBottom_toBottomOf="@id/txtTdsTitle"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="@id/txtTdsTitle" />
+
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/recycleGst"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="8dp"
+                                android:clipToPadding="false"
+                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                                app:layout_constraintTop_toBottomOf="@id/txtTdsTitle" />
+
+                            <View
+                                android:id="@+id/divTds"
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:layout_marginTop="10dp"
+                                android:background="@color/grey4"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/recycleGst"
+                                />
+
+                            <TextView
+                                android:id="@+id/txtTotal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/rubik_regular"
+                                android:text="@{viewmodel.gstModel.title}"
+                                android:textColor="@color/text_color2"
+                                android:textSize="14sp"
+                                android:layout_marginTop="10dp"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/divTds"
+                                tools:text="Total Amount" />
+
+
+                            <TextView
+                                android:id="@+id/txtValue"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/rubik_medium"
+                                app:placeHolder='@{@string/rupees}'
+                                app:placeHolderAtStart="@{true}"
+                                app:setAmountFormat="@{viewmodel.gstModel.finalAmount}"
+                                android:textColor="@color/text_color8"
+                                android:layout_marginTop="10dp"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/divTds" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <com.facebook.shimmer.ShimmerFrameLayout
+                            android:id="@+id/shimmer_view_container"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:elevation="6dp"
+                            android:visibility="@{viewmodel.isGstCalculating() ? View.VISIBLE : View.GONE}"
+                            app:shimmer_duration="800"
+                            app:shimmer_repeat_mode="restart">
+
+                            <include layout="@layout/shimmer_tds_item_rummy" />
+
+                        </com.facebook.shimmer.ShimmerFrameLayout>
+                    </com.google.android.material.card.MaterialCardView>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -697,7 +814,7 @@
                 android:textAllCaps="true"
                 android:textColor="@color/white"
                 android:textSize="12sp"
-                app:setAmountFormat="@{viewmodel.addCashAmmount}"
+                app:setAmountFormat="@{viewmodel.enableGstCalculation?viewmodel.gstModel.finalAmount:viewmodel.addCashAmmount}"
                 app:placeHolder='@{@string/add_cash+" "+@string/rupees}'
                 app:placeHolderAtStart="@{true}"
                 app:layout_constraintBottom_toBottomOf="parent"
