--- a/app/src/main/res/layout/item_wallet_bonus_rummy.xml
+++ b/app/src/main/res/layout/item_wallet_bonus_rummy.xml
@@ -3,74 +3,107 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <import type="android.graphics.Color"/>
+        <import type="android.view.View" />
         <variable
             name="viewModel"
             type="com.rummytitans.playcashrummyonline.cardgame.models.WalletInfoModel.WalletBonesModel" />
     </data>
-    <androidx.cardview.widget.CardView
-        android:id="@+id/btnWinning"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="4dp"
-        app:cardBackgroundColor="@color/rummy_black_3"
-        android:layout_marginHorizontal="4dp"
-        android:background="@drawable/custom_shadow_4dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/btnWinning"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            app:setViewBackground="@{@color/rummy_black_3}"
-            app:strokeColor="@{@color/grayBorder}"
-            app:viewRadius="@{4}">
+            app:cardCornerRadius="4dp"
+            app:cardBackgroundColor="@color/rummy_black_3"
+            android:layout_marginHorizontal="4dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/custom_shadow_4dp">
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:fontFamily="@font/rubik_regular"
-                android:text="@{viewModel.name}"
-                android:textColor="@{viewModel.colorCode}"
-                android:textSize="10sp"
-                app:layout_constraintBottom_toTopOf="@+id/textView76"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintStart_toEndOf="@+id/imageView21"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="packed" />
+                app:setViewBackground="@{@color/rummy_black_3}"
+                app:strokeColor="@{@color/grayBorder}"
+                app:viewRadius="@{4}">
 
-            <TextView
-                android:id="@+id/textView76"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:ellipsize="end"
-                android:fontFamily="@font/rubik_medium"
-                android:singleLine="true"
-                android:textColor="@color/text_color8"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintStart_toStartOf="@+id/textView1"
-                app:layout_constraintTop_toBottomOf="@+id/textView1"
-                android:setText='@{viewModel.val}' />
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:fontFamily="@font/rubik_regular"
+                    android:text="@{viewModel.name}"
+                    android:textColor="@{viewModel.colorCode}"
+                    android:textSize="10sp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView76"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0"
+                    app:layout_constraintStart_toEndOf="@+id/imageView21"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed" />
 
-            <ImageView
-                android:id="@+id/imageView21"
-                android:layout_width="2dp"
-                android:layout_height="20dp"
-                android:backgroundTint="@{viewModel.colorCode}"
-                android:background="@drawable/card_side_dodgeline"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/textView76"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/rubik_medium"
+                    android:singleLine="true"
+                    android:textColor="@color/text_color8"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0"
+                    app:layout_constraintStart_toStartOf="@+id/textView1"
+                    app:layout_constraintTop_toBottomOf="@+id/textView1"
+                    android:setText='@{viewModel.value}' />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/imageView21"
+                    android:layout_width="2dp"
+                    android:layout_height="20dp"
+                    android:backgroundTint="@{viewModel.colorCode}"
+                    android:background="@drawable/card_side_dodgeline"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@{viewModel.isArrowUpDown ? @drawable/ic_arrow_up : @drawable/ic_arrow_down}"
+                    android:visibility="@{viewModel.walletType == 1 ? View.VISIBLE : View.GONE}"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="4dp"
+                    app:tint="@color/text_color8"
+                    app:layout_constraintTop_toTopOf="@+id/textView1" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+        <ImageView
+            android:layout_width="16dp"
+            android:layout_height="10dp"
+            android:scaleType="fitXY"
+            android:elevation="3dp"
+            app:layout_constraintTop_toBottomOf="@+id/btnWinning"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="@{viewModel.isArrowUpDown &amp;&amp; viewModel.walletType == 1? View.VISIBLE : View.GONE,default=visible}"
+            app:srcCompat="@drawable/tooltip_icon"
+            app:tint="@color/rummy_black_3"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
