--- a/app/src/main/res/layout/item_transaction_details_rummy.xml
+++ b/app/src/main/res/layout/item_transaction_details_rummy.xml
@@ -63,9 +63,10 @@
             android:layout_marginStart="8dp"
             android:paddingVertical="8dp"
             android:fontFamily="@font/rubik_regular"
-            android:textColor="@color/text_color2"
+            android:textColor="@{model.colorCode}"
             android:textSize="12sp"
             android:text="@{model.value}"
+            android:gravity="right"
             tools:text="11.45 PM"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
