--- a/app/src/main/res/drawable/ic_rupees_rummy.xml
+++ b/app/src/main/res/drawable/ic_rupees_rummy.xml
@@ -1,18 +1,9 @@
-<vector xmlns:aapt="http://schemas.android.com/aapt" xmlns:android="http://schemas.android.com/apk/res/android"
-        android:height="45dp" android:viewportHeight="43.412"
-        android:viewportWidth="29.274" android:width="32dp">
-    <group>
-        <clip-path android:pathData="M0,0h29.274v43.412h-29.274z M 0,0"/>
-        <path android:fillAlpha="1"
-              android:pathData="M0.03,9.93L13.804,9.93a5.156,5.156 0,0 0,-0.8 -1.756,4.637 4.637,0 0,0 -1.574,-1.347 8.814,8.814 0,0 0,-2.513 -0.863,18.194 18.194,0 0,0 -3.557,-0.3L0,5.664l0.03,-5.661L29.183,0.003v5.661h-8.2a7.527,7.527 0,0 1,1.438 1.907,7.114 7.114,0 0,1 0.742,2.361L29.274,9.932v5.661h-6.3a8.921,8.921 0,0 1,-1.241 2.846,10.406 10.406,0 0,1 -2.225,2.407 14.065,14.065 0,0 1,-3.088 1.847,17.335 17.335,0 0,1 -3.83,1.166v0.121a11.369,11.369 0,0 1,1.983 1.12,12.954 12.954,0 0,1 1.726,1.483 19.21,19.21 0,0 1,1.65 1.938q0.817,1.09 1.786,2.452L28.396,43.412L18.012,43.412l-6.9,-10.808q-1,-1.574 -1.892,-2.755a10.437,10.437 0,0 0,-1.907 -1.968,7.49 7.49,0 0,0 -2.24,-1.2 9.057,9.057 0,0 0,-2.861 -0.409L0.03,26.272v-6.388h5.3A13.163,13.163 0,0 0,8.264 19.572a10.4,10.4 0,0 0,2.5 -0.893A7.365,7.365 0,0 0,12.639 17.312a4.7,4.7 0,0 0,1.1 -1.726L0.03,15.586Z"
-              android:strokeAlpha="0.25">
-            <aapt:attr name="android:fillColor">
-                <gradient android:endX="14.637" android:endY="43.412"
-                          android:startX="14.637" android:startY="0.003" android:type="linear">
-                    <item android:color="#ffffff" android:offset="0"/>
-                    <item android:color="#ffffff" android:offset="1"/>
-                </gradient>
-            </aapt:attr>
-        </path>
-    </group>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="16dp"
+    android:height="23dp"
+    android:viewportWidth="16"
+    android:viewportHeight="23">
+    <path
+        android:pathData="M8.288,22.4c-0.341,0 -0.597,-0.085 -0.768,-0.256 -0.17,-0.17 -0.32,-0.33 -0.448,-0.48L0.64,14.72c-0.235,-0.235 -0.384,-0.47 -0.448,-0.704a5.636,5.636 0,0 1,-0.064 -0.96v-1.6a0.74,0.74 0,0 1,0.224 -0.544,0.83 0.83,0 0,1 0.608,-0.256h1.28c1.216,0 2.144,-0.16 2.784,-0.48 0.661,-0.32 1.12,-0.757 1.376,-1.312 0.256,-0.555 0.384,-1.205 0.384,-1.952 0,-0.683 -0.128,-1.301 -0.384,-1.856 -0.256,-0.576 -0.693,-1.035 -1.312,-1.376 -0.619,-0.341 -1.493,-0.512 -2.624,-0.512H0.8a0.852,0.852 0,0 1,-0.576 -0.224A0.852,0.852 0,0 1,0 2.368V0.8A0.78,0.78 0,0 1,0.224 0.224,0.852 0.852,0 0,1 0.8,0h13.664a0.78,0.78 0,0 1,0.576 0.224,0.78 0.78,0 0,1 0.224,0.576v1.568a0.852,0.852 0,0 1,-0.224 0.576,0.78 0.78,0 0,1 -0.576,0.224H9.152l0.96,-0.704c0.981,0.384 1.664,1.035 2.048,1.952 0.384,0.896 0.576,1.856 0.576,2.88 0,1.301 -0.299,2.464 -0.896,3.488 -0.576,1.003 -1.408,1.813 -2.496,2.432 -1.067,0.619 -2.325,0.992 -3.776,1.12l-1.28,0.16 0.64,-2.368 8.288,9.12c0.192,0.213 0.288,0.395 0.288,0.544 0,0.17 -0.064,0.32 -0.192,0.448 -0.128,0.107 -0.31,0.16 -0.544,0.16h-4.48zM0.8,8.352a0.78,0.78 0,0 1,-0.576 -0.224A0.78,0.78 0,0 1,0 7.552V6.016a0.78,0.78 0,0 1,0.224 -0.576,0.796 0.796,0 0,1 0.576,-0.256h13.664a0.73,0.73 0,0 1,0.576 0.256,0.78 0.78,0 0,1 0.224,0.576v1.536a0.73,0.73 0,0 1,-0.256 0.576,0.78 0.78,0 0,1 -0.576,0.224H0.8z"
+        android:fillColor="@color/white"/>
 </vector>
