--- a/app/src/main/res/layout/fragment_verify_rummy.xml
+++ b/app/src/main/res/layout/fragment_verify_rummy.xml
@@ -10,6 +10,7 @@
         <import type="com.rummytitans.sdk.cardgame.R" />
 
         <import type="android.graphics.Color" />
+        <import type="com.rummytitans.sdk.cardgame.utils.MyConstants"/>
 
         <import type="android.text.TextUtils" />
 
@@ -26,72 +27,97 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-
+                android:padding="10dp"
                 android:layout_height="match_parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/layoutEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:background="@drawable/box_with_grey_border_rummy"
+                    android:paddingHorizontal="10dp"
+                    android:paddingBottom="8dp"
                     android:elevation="3dp"
+                    android:background="@drawable/box_with_grey_border_rummy"
+                    android:paddingTop="12dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
-
 
                     <TextView
                         android:id="@+id/textView11"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="9dp"
+                        android:fontFamily="@font/rubik_medium"
                         android:text="@string/frag_verify_email"
-                        android:textColor="@color/text_color2"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
+                        android:textColor="@color/text_color8"
+                        android:textSize="12sp"
+                        app:layout_constraintVertical_chainStyle="packed"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toTopOf="@id/txtEmail"/>
 
 
                     <TextView
+                        android:id="@+id/btnVerifyEmail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/raised_rounded_rectangle_button"
+                        android:backgroundTint="@color/rummy_maingreen"
+                        android:fontFamily="@font/rubik_medium"
+                        android:gravity="center"
+                        android:elevation="6dp"
+                        android:paddingLeft="12dp"
+                        android:layout_marginTop="6dp"
+                        android:paddingTop="5dp"
+                        android:paddingRight="12dp"
+                        android:paddingBottom="5dp"
+                        android:text="@string/frag_verify_verify"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="12sp"
+                        android:visibility='@{viewmodel.verificationInfo.EmailVerify?View.GONE:View.VISIBLE}'
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_chainStyle="spread_inside"
+                        app:layout_constraintTop_toTopOf="@+id/textView11" />
+
+                    <EditText
                         android:id="@+id/txtEmail"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="@android:color/transparent"
-                        android:editable="false"
-                        android:focusable="false"
+                        android:backgroundTint="@{viewmodel.verificationInfo.EmailVerify ? @color/text_color5 : @color/text_color2}"
+                        android:enabled="@{viewmodel.verificationInfo.EmailVerify?false:true}"
+                        android:focusable='@{viewmodel.verificationInfo.EmailVerify?false:true}'
                         android:fontFamily="@font/rubik_medium"
-                        android:hint="Enter Email"
-                        android:textColorHint="@color/text_color6"
-                        android:text='@{viewmodel.verificationInfo.Email}'
+                        android:hint="@string/txt_enter_your_email"
+                        android:singleLine="true"
                         android:textColor="@color/text_color8"
-                        android:textSize="18sp"
+                        android:textColorHint="@color/text_color2"
+                        android:textSize="14sp"
+                        app:layout_constraintVertical_chainStyle="packed"
+                        app:bottomPadding="@{viewmodel.verificationInfo.EmailVerify ? 0 : 20}"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/imgEmailVerify"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+                        app:layout_constraintTop_toBottomOf="@+id/textView11"
+                        app:removeDefaultPadding="@{true}"
+                        app:topPadding="@{viewmodel.verificationInfo.EmailVerify ? 0 : 20}" />
 
 
                     <ImageView
                         android:id="@+id/imgEmailVerify"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
                         android:background="@drawable/ic_done_new"
                         android:visibility='@{viewmodel.verificationInfo.EmailVerify?View.VISIBLE:View.GONE}'
-                        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/txtEmail" />
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <LinearLayout
                         android:id="@+id/viewEmail"
@@ -100,6 +126,7 @@
                         android:layout_marginTop="12dp"
                         android:layout_marginEnd="8dp"
                         android:orientation="horizontal"
+                        android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="@+id/txtEmail"
@@ -110,54 +137,47 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="2dp"
                             android:layout_weight="1"
+                            tools:visibility="visible"
                             android:visibility='@{viewmodel.verificationInfo.EmailVerify?View.GONE:View.VISIBLE}'>
 
-                            <View
-                                android:layout_width="0dp"
-                                android:layout_height="0dp"
-                                android:elevation="3dp"
-                                android:alpha=".4"
-                                android:visibility="gone"
-                                android:background="@color/grayBorder"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
-
                             <TextView
-                                android:id="@+id/btnVerifyEmail"
                                 android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:background="@drawable/box_grey_border_rummy"
+                                android:layout_height="match_parent"
+                                android:background="@drawable/raised_rounded_rectangle_button"
                                 android:backgroundTint="@color/rummy_maingreen"
                                 android:elevation="2dp"
-                                android:fontFamily="@font/rubik_medium"
                                 android:gravity="center"
-                                android:onClick="@{()->viewmodel.verifyEmail()}"
                                 android:paddingLeft="8dp"
                                 android:paddingTop="4dp"
                                 android:paddingRight="8dp"
                                 android:paddingBottom="4dp"
-                                android:layout_marginEnd="8dp"
                                 android:text="@string/frag_verify_verify"
                                 android:textAllCaps="true"
-                                android:textColor="@color/rummy_maingreen"
+                                android:textColor="@color/white"
                                 android:textSize="12sp"
                                 android:textStyle="bold"
-                                app:layout_constraintHorizontal_chainStyle="spread_inside"
-                                tools:ignore="MissingConstraints" />
+                                app:layout_constraintHorizontal_chainStyle="spread_inside" />
 
-
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                android:background="@color/alpha_white"
+                                android:elevation="3dp"
+                                android:visibility="@{TextUtils.isEmpty(viewmodel.verificationInfo.Email)?View.VISIBLE:View.GONE}"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
                         <TextView
                             android:id="@+id/btnChangeEmail"
                             android:layout_width="0dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="8dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="2dp"
                             android:layout_weight="1"
                             android:background="@drawable/raised_rounded_rectangle_button"
-                            android:backgroundTint="@color/rummy_maingreen"
+                            android:backgroundTint="@{Color.parseColor(viewmodel.selectedColor)}"
                             android:elevation="2dp"
                             android:gravity="center"
                             android:paddingLeft="8dp"
@@ -183,23 +203,20 @@
                         android:text="We will send you a verification email to verify your email address"
                         android:textColor="@color/text_color2"
                         android:textSize="12sp"
-                        android:visibility='@{viewmodel.verificationInfo.EmailVerify?View.GONE:View.VISIBLE}'
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/txtEmail"
                         app:layout_constraintTop_toBottomOf="@+id/viewEmail" />
-
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvVerification"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
                     android:visibility="visible"
+                    android:layout_marginTop="8dp"
+                    android:overScrollMode="never"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -213,74 +230,77 @@
                     android:layout_width="0dp"
                     android:layout_height="3dp"
                     android:layout_marginTop="18dp"
+                    android:visibility="gone"
                     android:background="@drawable/real_time_dash_line"
-                    android:backgroundTint="@color/grayBorder"
                     app:layout_constraintEnd_toEndOf="@id/rvVerification"
                     app:layout_constraintStart_toStartOf="@+id/rvVerification"
                     app:layout_constraintTop_toBottomOf="@+id/rvVerification" />
 
                 <ImageView
                     android:id="@+id/imageView40"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="42dp"
+                    android:layout_width="117dp"
+                    android:layout_height="117dp"
+                    android:layout_marginTop="74dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/rvVerification"
-                    app:layout_constraintTop_toBottomOf="@+id/rvVerification"
-                    app:srcCompat="@drawable/ic_how_to_verify" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/divider"
+                    android:src="@drawable/ic_verify_contact_us_rumy" />
 
                 <TextView
                     android:id="@+id/textView154"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="30dp"
-                    android:layout_marginTop="@dimen/dimen_10"
-                    android:fontFamily="@font/rubik_medium"
-                    android:text="Do you have any doubts?\ncheck our account verify guideline."
-                    android:textColor="@color/text_color2"
-                    android:textSize="13sp"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginRight="14dp"
+                    android:fontFamily="@font/rubik_regular"
                     android:gravity="center"
+                    android:text="If you need assistance in account verification, \n connect to our customer support"
+                    android:textColor="@color/text_color2"
+                    android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView40" />
 
+
                 <TextView
                     android:id="@+id/btnHowToVerify"
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:background="@drawable/bg_squre_shape"
+                    android:backgroundTint="@color/rummy_maingreen"
                     android:elevation="2dp"
                     android:fontFamily="@font/rubik_medium"
                     android:gravity="center"
-                    android:paddingHorizontal="20dp"
-                    android:text="HOW TO VERIFY"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="@dimen/dimen_5"
+                    android:paddingRight="20dp"
+                    android:paddingBottom="@dimen/dimen_5"
+                    android:text="@string/contact_us"
+                    android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textSize="12sp"
-                    android:background="@drawable/box_with_grey_border_rummy8"
-                    android:backgroundTint="@color/rummy_maingreen"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/textView154"
                     app:layout_constraintStart_toStartOf="@+id/textView154"
                     app:layout_constraintTop_toBottomOf="@+id/textView154" />
 
-
-                <ProgressBar
-                    android:id="@+id/loadingLogin"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/bg_white_progress"
-                    android:elevation="10dp"
-                    android:padding="@dimen/margin_min"
-                    android:theme="@style/RummySdk_ProgressBar"
-                    android:visibility="@{viewmodel.isLoading() ? View.VISIBLE : View.GONE}"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                <com.rummytitans.sdk.cardgame.widget.FadingSnackbar
+                    android:id="@+id/fadingSnackbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:elevation="@dimen/margin_micro"
+                    android:visibility="gone"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <include
+                    android:id="@+id/progress"
+                    layout="@layout/layout_progress_dialog_rummy"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:visible="@{viewmodel.isLoading()}"
+                    app:layout_constraintBottom_toBottomOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
